src/bin/snapshots/antlr4_rust_gen__tests__typed_context_accessors_e_context.snap
---
source: src/bin/antlr4-rust-gen.rs
expression: e_context
---

    pub fn child_count(&self) -> usize {
        match &self.__node {
            __GeneratedRuleContext::Stored(node) => node.child_count(),
            __GeneratedRuleContext::Active { context, .. } => context.child_count(),
        }
    }

    /// Iterates terminals owned directly by this context without descending
    /// into nested rule contexts.
    ///
    /// Recovered trees include error nodes such as synthetic `<missing ...>`
    /// tokens through the same `TerminalNode` surface.
    pub fn direct_terminals(&self) -> impl Iterator<Item = TerminalNode<'a>> + '_ {
        __terminal_children(self.__node).map(TerminalNode::new)
    }

    pub fn start(&self) -> __GeneratedTokenView {
        let token = match &self.__node {
            __GeneratedRuleContext::Stored(node) => node.start(),
            __GeneratedRuleContext::Active { context, tokens, .. } => context.start(tokens),
        };
        __GeneratedTokenView { text: token.map(|token| token.text_or_empty().to_owned()).unwrap_or_default() }
    }

    pub fn text(&self) -> String {
        match &self.__node {
            __GeneratedRuleContext::Stored(node) => node.text(),
            __GeneratedRuleContext::Active { context, storage, tokens } => context.text(storage, tokens),
        }
    }
}

#[allow(dead_code, private_bounds, clippy::all)]
impl<'a, State: __RecoveryContextState> EContext<'a, State> {
    pub fn e_children(&self) -> impl Iterator<Item = EContext<'a>> + '_ {
        __rule_children(self.__node, 1)
            .map(move |node| EContext::__from_child_node(node, self.__invocation_states.as_deref()))
    }
    pub fn int_token(&self) -> Option<TerminalNode<'a>> {
        __token_children(self.__node, 1)
            .next()
            .map(TerminalNode::new)
    }
    pub fn star_token(&self) -> Option<TerminalNode<'a>> {
        __token_children(self.__node, 2)
            .next()
            .map(TerminalNode::new)
    }
    pub fn plus_token(&self) -> Option<TerminalNode<'a>> {
        __token_children(self.__node, 3)
            .next()
            .map(TerminalNode::new)
    }
    pub fn left(&self) -> Option<EContext<'a>> {
        __rule_children(self.__node, 1)
            .nth(0)
            .map(|node| EContext::__from_child_node(node, self.__invocation_states.as_deref()))
    }
    pub fn right(&self) -> Option<EContext<'a>> {
        __rule_children(self.__node, 1)
            .nth(1)
            .map(|node| EContext::__from_child_node(node, self.__invocation_states.as_deref()))
    }
}

#[allow(dead_code, clippy::all)]
impl<'a> EContext<'a, ValidatedTreeContext> {
    fn __from_validated_node(node: RuleNodeView<'a>) -> Self {
        Self::__from_validated_node_with_invocation_states(node, None)
    }

    fn __from_validated_child_node(
        node: RuleNodeView<'a>,
        parent_invocation_states: Option<&[isize]>,
    ) -> Self {
        let invocation_states = parent_invocation_states.map(|states| {
            let mut invocation_states = Vec::with_capacity(states.len() + 1);
            invocation_states.push(node.invoking_state());
            invocation_states.extend_from_slice(states);
            invocation_states
        });
        Self::__from_validated_node_with_invocation_states(node, invocation_states)
    }

    fn __from_validated_listener_node(
        node: RuleNodeView<'a>,
        invocation_states: Option<&[isize]>,
    ) -> Self {
        Self::__from_validated_node_with_invocation_states(
            node,
            invocation_states.map(|states| states.to_vec()),
        )
    }

    fn __from_validated_node_with_invocation_states(
        node: RuleNodeView<'a>,
        invocation_states: Option<Vec<isize>>,
    ) -> Self {
        let __default = __RuleAttrs1::default();
        let __attrs = node.generated_attrs::<__RuleAttrs1>().unwrap_or(&__default);
        Self {
            __node: __GeneratedRuleContext::Stored(node),
            __invocation_states: invocation_states,
            __state: std::marker::PhantomData,
            v: __attrs.v.clone(),
        }
    }

    pub fn rule_node(&self) -> RuleNodeView<'a> {
        match self.__node {
            __GeneratedRuleContext::Stored(node) => node,
            __GeneratedRuleContext::Active { .. } => unreachable!("validated context contains an active parser context"),
        }
    }

    pub fn e_children(&self) -> impl Iterator<Item = EContext<'a, ValidatedTreeContext>> + '_ {
        __rule_children(self.__node, 1)
            .map(move |node| EContext::<ValidatedTreeContext>::__from_validated_child_node(node, self.__invocation_states.as_deref()))
    }
    pub fn int_token(&self) -> Option<TerminalNode<'a>> {
        __token_children(self.__node, 1)
            .next()
            .map(TerminalNode::new)
    }
    pub fn star_token(&self) -> Option<TerminalNode<'a>> {
        __token_children(self.__node, 2)
            .next()
            .map(TerminalNode::new)
    }
    pub fn plus_token(&self) -> Option<TerminalNode<'a>> {
        __token_children(self.__node, 3)
            .next()
            .map(TerminalNode::new)
    }
    pub fn left(&self) -> Option<EContext<'a, ValidatedTreeContext>> {
        __rule_children(self.__node, 1)
            .nth(0)
            .map(|node| EContext::<ValidatedTreeContext>::__from_validated_child_node(node, self.__invocation_states.as_deref()))
    }
    pub fn right(&self) -> Option<EContext<'a, ValidatedTreeContext>> {
        __rule_children(self.__node, 1)
            .nth(1)
            .map(|node| EContext::<ValidatedTreeContext>::__from_validated_child_node(node, self.__invocation_states.as_deref()))
    }
}
