src/bin/snapshots/antlr4_rust_gen__tests__typed_hook_action_method_names_remain_unique_after_suffixing.snap
---
source: src/bin/antlr4-rust-gen.rs
expression: "mappings.iter().map(|mapping|\n(mapping.coordinate_index, mapping.kind,\nmapping.method_name.as_str(),)).collect::<Vec<_>>()"
---
[
    (
        0,
        Action,
        "custom_action_action",
    ),
    (
        1,
        Action,
        "custom_action_action",
    ),
    (
        2,
        Action,
        "custom_action_action_2",
    ),
]
