src/bin/snapshots/antlr4_rust_gen__tests__untranslated_parser_predicate_semantics.snap
---
source: src/bin/antlr4-rust-gen.rs
expression: entries
---
[
    SemanticsEntry {
        kind: ParserPredicate,
        rule_index: Some(
            0,
        ),
        rule_name: Some(
            "s",
        ),
        index: Some(
            0,
        ),
        atn_state: None,
        line: Some(
            4,
        ),
        column: Some(
            6,
        ),
        body: Some(
            "isTypeName()",
        ),
        disposition: AssumeTrue,
        template: None,
    },
]
