src/bin/snapshots/antlr4_rust_gen__tests__untranslated_parser_predicate_templates.snap
---
source: src/bin/antlr4-rust-gen.rs
expression: templates
---
[
    (
        (
            0,
            0,
        ),
        Unknown,
    ),
]
